--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>com.xliic</groupId>
     <artifactId>json-java</artifactId>
     <packaging>jar</packaging>
-    <version>1.1</version>
+    <version>1.2-SNAPSHOT</version>
     <name>${project.groupId}:${project.artifactId}</name>
     <url>https://github.com/42Crunch/JSON-java</url>
     <description>
@@ -68,7 +68,7 @@
         <connection>scm:git:git://github.com/42Crunch/JSON-java.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/42Crunch/JSON-java.git</developerConnection>
         <url>http://github.com/42Crunch/JSON-java/tree/master</url>
-        <tag>json-java-1.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <properties>
